# food-delivery-lakehouse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: roadmap.md
docs/adr/: 0001-monorepo-structure.md  0002-two-pipeline-split.md  0003-silver-modeling.md  0004-order-enriched-streaming-table.md  0005-debezium-decimal-string.md  0006-reverse-etl-lakebase.md  0007-multi-environment-cicd.md  README.md
infra/: apply.sh  main.tf  outputs.tf  postgres.tf  terraform.tfvars.example  variables.tf  vm.tf
lakehouse/: databricks.yml  pyproject.toml
lakehouse/pipelines/: bronze.py  silver.py
lakehouse/pipelines/transform/: gold.py  silver.py
lakehouse/resources/: bronze.pipeline.yml  job.yml  lakebase.project.yml  transform.pipeline.yml
lakehouse/serving/: create_synced_table.sh
lakehouse/shared/: schemas.py
lakehouse/src/food_delivery_shared/: load_logic.py  schemas.py
lakehouse/tests/: test_load_logic.py  test_schemas.py
source-system/: .env.example  cdc-setup.sql  docker-compose.yml  register-postgres.example.json  schema.sql  setup.sh
source-system/load-generator/: Dockerfile  generator.py
