[project]
name = "food-delivery-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/food_delivery_shared"]

[dependency-groups]
dev = [
    "pyspark==4.0.*",
    "ruff",
]
